# Standalone app
SET(APP_NAME "${CMAKE_PROJECT_NAME}-app")

SET(ASIO_DIR ${LIBS_DIR}/ASIO_SDK)
SET(RTMIDI_DIR ${WDL_DIR}/RtAudioMidi)

message (STATUS "Path to RTMIDI is ${RTMIDI_DIR}")
message (STATUS "Path to ASIO is ${ASIO_DIR}")

INCLUDE_DIRECTORIES(${ASIO_DIR})
INCLUDE_DIRECTORIES(${RTMIDI_DIR})
INCLUDE_DIRECTORIES(${STANDALONE_DIR})

# Main app wrapper
FILE(GLOB STANDALONE_SRCS ${STANDALONE_DIR}/*.cpp)
FILE(GLOB STANDALONE_HDRS ${STANDALONE_DIR}/*.h)
SET(STANDALONE_FILES ${STANDALONE_SRCS} ${STANDALONE_HDRS})

# Standalone IPlug
set(IPLUG_STANDALONE_FILES ${IPLUG_DIR}/IPlugStandalone.cpp ${IPLUG_DIR}/IPlugStandalone.h)

# RtAudio
FILE(GLOB RTMIDI_HDRS ${RTMIDI_DIR}/*.h)
FILE(GLOB RTMIDI_SRCS ${RTMIDI_DIR}/*.cpp)
SET(RTMIDI_FILES ${RTMIDI_HDRS};${RTMIDI_SRCS})

# ASIO SDK
FILE(GLOB ASIO_HDRS ${ASIO_DIR}/*.h)
FILE(GLOB ASIO_SRCS ${ASIO_DIR}/*.cpp)
SET(ASIO_FILES ${ASIO_HDRS};${ASIO_SRCS})

source_group(ASIO FILES ${ASIO_FILES})
source_group(RtAudio FILES ${RTMIDI_FILES})
source_group(VOSIMLib FILES ${VOSIMLIB_HDRS} ${VOSIMLIB_SRCS})
source_group(VOSIMLib-Units FILES ${VOSIMLIB_UNIT_HDRS} ${VOSIMLIB_UNIT_SRCS})
source_group(VOSIMSynth FILES ${PROJECT_FILES} ${STANDALONE_FILES})
source_group(Resources FILES ${RESOURCE_FILES})
source_group(WDL FILES ${WDL_FILES})
source_group(IPlug FILES ${IPLUG_FILES} ${IPLUG_STANDALONE_FILES})
source_group(NanoVG FILES ${NANOVG_FILES})

IF(WIN32)
  ADD_DEFINITIONS(-DSA_API -D__WINDOWS_DS__ -D__WINDOWS_MM__ -D__WINDOWS_ASIO__)

  ADD_EXECUTABLE (${APP_NAME} WIN32 
    ${PROJECT_FILES}
    ${STANDALONE_FILES}
    ${RESOURCE_FILES}
    ${RTMIDI_FILES}
    ${ASIO_FILES}
    ${WDL_FILES}
    ${IPLUG_FILES}
    ${IPLUG_STANDALONE_FILES}
    ${NANOVG_FILES}
    )

  target_link_libraries(${APP_NAME} ${ADDITIONAL_LIBRARIES})
  target_link_libraries(${APP_NAME} VOSIMLib LICELib)
  target_link_libraries(${APP_NAME} dsound winmm comctl32 wininet)
ENDIF()
